validaciones, cambio de contraseña

--- a/Sln_Proyecto_Monica_Elvis/prj_Alissez_Estetica/Principal.Master
+++ b/Sln_Proyecto_Monica_Elvis/prj_Alissez_Estetica/Principal.Master
@@ -10,7 +10,6 @@
     <script type="text/javascript" src="./Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="./Scripts/jquery-3.0.0.min.js"></script>
     <link type="text/css" href="./css/menu.css" rel="stylesheet" />
-
      <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -24,15 +23,20 @@
                         <button type="button" class="list-group-item list-group-item-action active">
                             Gestion Productos
                         </button>
-                        <asp:HyperLink ID="hplTipoProducto"  runat="server" onclick="closeNav()" NavigateUrl="~/TipoProducto.aspx" Font-Size="Large">Registrar Tipo Producto</asp:HyperLink>
-                        <asp:HyperLink ID="hplProducto"  runat="server" onclick="closeNav()" NavigateUrl="~/Producto.aspx" Font-Size="Large">Registrar Producto</asp:HyperLink>
-                        <asp:HyperLink ID="hplProcedimiento"  runat="server" onclick="closeNav()" Font-Size="Large">Registrar Procedimiento</asp:HyperLink>
+                        <asp:HyperLink ID="hplTipoProducto" runat="server" onclick="closeNav()" NavigateUrl="~/TipoProducto.aspx" Font-Size="Large">Registrar Tipo Producto</asp:HyperLink>
+                        <asp:HyperLink ID="hplProducto" runat="server" onclick="closeNav()" NavigateUrl="~/Producto.aspx" Font-Size="Large">Registrar Producto</asp:HyperLink>
+                        <asp:HyperLink ID="hplProcedimiento" runat="server" onclick="closeNav()" Font-Size="Large">Registrar Procedimiento</asp:HyperLink>
                         <asp:HyperLink ID="hplMedidaProducto" runat="server" onclick="closeNav()" NavigateUrl="~/MedidaProducto.aspx" Font-Size="Large">Registrar Medida de Producto</asp:HyperLink>
                     </div>
                     <div class="list-group">
                         <button type="button" class="list-group-item list-group-item-action active">
                             Reportes</button>
                         <asp:HyperLink ID="hplReporte" CssClass="list-group-item list-group-item-action" runat="server" onclick="closeNav()" Font-Size="Large">Reporte de Producto</asp:HyperLink>
+                    </div>
+                    <div class="list-group">
+                        <button type="button" class="list-group-item list-group-item-action active">
+                            Seguridad</button>
+                        <asp:HyperLink ID="hplCambioPassword" CssClass="list-group-item list-group-item-action" runat="server" onclick="closeNav()" Font-Size="Large" NavigateUrl="~/CambioPassword.aspx">Modificar Contraseña</asp:HyperLink>
                     </div>
                 </div>
                 <br />
@@ -44,15 +48,20 @@
                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                     </asp:ContentPlaceHolder>
                 </div>
-            </div>
-        </div>
     </div>
-    <footer class="container-fluid">
-        <p>Footer Text</p>
+    </div>
+    </div>
+    <br />
+    <br />
+    <footer>
+        <div class="card-footer">
+            © 2019 Derechos Reservados | Diseñado por Monica y Elvis
+        </div>
     </footer>
     <script>
         function openNav() {
             document.getElementById("mySidenav").style.width = "25%";
+            document.getElementById("mySidenav").style.height = "100%";
         }
 
         function closeNav() {
