--- a/Sln_Proyecto_Monica_Elvis/prj_Alissez_Estetica/css/menu.css
+++ b/Sln_Proyecto_Monica_Elvis/prj_Alissez_Estetica/css/menu.css
@@ -36,7 +36,7 @@
         margin-left: 50px;
     }
 
-@media screen and (max-height: 450px) {
+@media screen and (max-height: auto) {
     .sidena {
         padding-top: 15px;
     }
@@ -48,7 +48,7 @@
 
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
 .row.content {
-    height: 1500px
+    height: auto
 }
 
 /* Set gray background color and 100% height */
@@ -65,7 +65,7 @@ footer {
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: auto) {
     .sidenav {
         height: auto;
         padding: 15px;
